// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`item should create an item 1`] = `
<div
  class="test"
  style="position: absolute; left: 10px; top: 10px;"
/>
`;

exports[`item should create an item 2`] = `
<div
  class="test"
  style="position: absolute; left: 10px; top: 10px;"
/>
`;

exports[`item should create an item 3`] = `
<div
  class="test"
  style="position: absolute; left: 0px; top: 10px;"
/>
`;

exports[`item should create an item 4`] = `
<div
  class="test"
  style="position: absolute; left: 20px; top: 10px;"
/>
`;
